# cprs-cli

./: Cargo.toml  README.md
src/: config.rs  main.rs  parse_toml.rs  search_toml.rs
